styles.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Poppins", sans-serif;
  scroll-behavior: smooth;
}

.grey-text {
  color: #c7c7c7;
}

/* Header */

header {
  background-color: #201c2d;
  color: #fff;
  padding: 1.2rem;
}

.header-content {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.header-left {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.header-left h1 {
  font-size: 1.5rem;
  font-weight: 700;
}

.header-left p {
  font-size: 0.8rem;
  font-weight: 300;
}

.header-right {
  display: flex;
}

.header-item {
  margin-left: 1rem;
}

.header-item a {
  color: #fff;
  text-decoration: none;
}

.animated-underline {
  display: inline-block;
  position: relative;
  text-decoration: none;
}

.animated-underline::after {
  content: "";
  position: absolute;
  width: 100%;
  height: 2px;
  bottom: 0;
  left: 0;
  background-color: #4d62eb;
  transform-origin: bottom right;
  transition: transform 0.25s ease-out;
  transform: scaleX(0);
}

.animated-underline:hover::after {
  transform: scaleX(0.8);
  transform-origin: bottom left;
}

/* Body */

main {
  background-color: #f5f5f5;
  padding: 1.2rem;
}

/* About */

#about {
  display: flex;
  justify-content: space-around;
  align-items: center;
}

.section-left {
  width: 50%;
}

.section-left h1 {
  font-size: 4rem;
  font-weight: 700;
}

.section-left h2 {
  font-size: 2rem;
  font-weight: 700;
}

.section-left p {
  font-size: 1.2rem;
  font-weight: 300;
  margin: 1rem 0;
}

.section-right {
  width: 50%;
  max-width: 400px;
}

.img-frame,
.img-frame::after,
.img-frame img {
  width: 100%;
  height: 100%;
  border-radius: 4px;
  border-bottom-left-radius: 50%;
  position: relative;
  z-index: 2;
}

.img-frame img {
  border-left: 2px solid #4d62eb;
  border-bottom: 2px solid #4d62eb;
}

.img-frame::after {
  content: "";
  position: absolute;
  background-color: #4d62eb;
  bottom: 10px;
  left: 8px;
  z-index: 1;
}

#experience,
#projects {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding-left: 9rem;
  padding-right: 9rem;
}

#experience h1,
#projects h1 {
  font-size: 3.5rem;
  font-weight: 800;
  margin-bottom: 1rem;
}

#experience h2,
#projects h2 {
  font-size: 1.2rem;
  font-weight: 300;
  margin-bottom: 0.5rem;
}

.timeline {
  position: relative;
  width: 100%;
  max-width: 800px;
  margin: 0 auto;
  padding: 0 20px;
}

.timeline-item {
  position: relative;
  width: 100%;
  margin-bottom: 20px;
  display: flex;
  justify-content: space-between;
  padding: 20px;
  background-color: #fff;
  border-radius: 4px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
}

.timeline-content {
  width: 80%;
}

.timeline-content ul {
  padding-left: 1rem;
  font-size: smaller;
  font-weight: 300;
}

.timeline-header {
  display: flex;
  align-items: center;
  margin-bottom: 1rem;
}

.timeline-header img {
  width: 70px;
  height: 70px;
  margin-right: 1rem;
  object-fit: contain;
  object-position: center;
  border-radius: 25%;
  padding: 5px;
  border: 2px solid #4d62eb;
}

.timeline-date {
  width: 30%;
  position: absolute;
  top: 0;
  right: 0;
  padding: 20px;
  text-align: right;
  display: block;
  font-size: 0.8em;
  color: #666;
}

.grid-wrap {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  gap: 15px;
  margin-top: 3rem;
}

.project-item {
  width: 100%;
  max-width: 360px;
  padding: 1.25rem;
  background-color: #fff;
  border-radius: 4px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
  transition: box-shadow 0.25s ease-out;
  overflow: hidden;
}

.project-item:hover {
  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
}

.project-item-header {
  position: relative;
  width: 100%;
  height: 230px;
}

.project-item-header img {
  width: 100%;
  height: 100%;
  border-radius: 4px;
  object-fit: contain;
  scale: 1.1;
  object-position: center;
}

.project-item-desc {
  margin-top: 1.25rem;
}

.project-item-desc h2 {
  font-size: 1.5rem;
  font-weight: 700;
}

.project-item-desc p {
  font-size: 0.8rem;
  font-weight: 300;
  margin-top: 0.5rem;
}

.project-item-tags {
  display: flex;
  flex-wrap: wrap;
  gap: 0.5rem;
  margin-top: 1rem;
}

.project-item-tags p {
  font-size: 0.8rem;
  font-weight: 300;
}

.project-item-tags p::before {
  content: "#";
}

.project-item-tags p:nth-child(1) {
  color: #ff8c00;
}

.project-item-tags p:nth-child(2) {
  color: #4caf50;
}

.project-item-tags p:nth-child(3) {
  color: #2196f3;
}

.project-item-tags p:nth-child(4) {
  color: #e91e63;
}

